assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');


/* Asterisk wildcard selector to overide default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #3a3a3a;
    font-family: 'Lato', sans-serif;
}

h1,
h2,
h3 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
}

.hidden-heading {
    display: none;
}

/* Header */
header {
    background-color: #fff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;

}

/* Nav toggle */
/* check boxes have a pseudo class that indicates when they are checked */
#nav-toggle:checked~nav {
    display: block;
    /* the tilde "~" indicates we want to target the adjoining nav element */
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

header a {
    text-decoration: none;
    color: inherit;
}



#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #fff;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}

/* Main content */
main {
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    margin-top: 47px;
}

/* Hero section */
#hero {
    height: 600px;
    width: 100%;
    background: url("../images/hero-image.webp") no-repeat center center/cover;
    position: relative;
}

#cover-text {
    /* Final rgba value sets the opacity so it is semi-transparent */
    background-color: rgba(241, 109, 107, .7);
    font-size: 130%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    min-height: 200px;
    padding-top: 40px;
    padding-left: 10px;
}

#cover-text>h2,
#cover-text>h3 {
    color: #fff;
}

/* Reasons section*/
#reasons {
    width: 90%;
    margin: 20px auto;
}

#reasons h2 {
    margin-bottom: 20px;
    font-size: 280%;
    text-align: center;

}

#benefits-physical>div,
#benefits-mental>div {
    line-height: 22px;
    margin-bottom: 20px;
}

#benefits hr {
    border-top: 1px solid #3a3a3a;
}

#benefits p {
    padding: 0 20px;
}

#circle-cover-bg {
    height: 90vw;
    width: 90vw;
    background: url("../images/reasons-image.webp") no-repeat center center/cover;
    margin-bottom: 20px;
    /* Changes the square image into a circle */
    border-radius: 50%;
    max-height: 300px;
    max-width: 300px;
}

#benefits-image {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Meet ups section*/
#times {
    background: url("../images/dublin-city.webp") no-repeat center center/cover;
    /* Handles responsivity without the need for a media query */
    display: flex;
    flex-wrap: wrap;
}

#times div {
    color: #fafafa;
    background-color: rgba(0, 0, 0, .6);
    padding: 15px;
    text-align: center;
    /* This will not wrap on screens of less than 400px wide.
    Each div will expand to fill the available spae on its row */
    flex-basis: 200px;
    flex-grow: 1;
    /* Meet ups times divs show as a grid over the background image*/
    border: 2px solid white;
}

#times h3 {
    /* Override the text colour set in h3 general styles */
    color: #fafafa;
}


/* Footer */
#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #3a3a3a;
}

/* Media query: tablets and larger (768px and up)*/
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 75px;
        margin: 0 0.5rem;

    }

    /* Main content */
    main {
        /* Push main content down to accomodate larger header */
        margin-top: 79px;
    }

    #cover-text {
        width: 300px;
        right: 50px;
    }

    /* Reasons section */

    #benefits-physical,
    #benefits-mental {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #benefits-physical > div,
    #benefits-mental > div {
        width: 75%;
    }

    #benefits-mental > div {
        text-align: end;
        align-self: flex-end;
    }

}

/* Media query: laptops and desktops(992px and up)*/
@media screen and (min-width: 992px) {

    /* underline for links when they are hovered */
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a;
    }  

}

/* Media query: laptops and desktops(1200 px and up)*/
@media screen and (min-width: 1200px) {

    /* Styles the reasons section to be more appealing */
     #benefits {
        display: flex;
        flex-direction: row;
     }
     /* Spaces each div evenly */
     #benefits > div {
        flex: 1;
     }

     /* sets the image between the two benefits divs (doesn't stay at the end) by changing orders */
     #benefits-image {
        order: 0;
     }

     #benefits-mental {
        order: 1;
     }

     #benefits-physical > div {
        align-self: flex-end;
     }
     
     #benefits-mental > div {
        align-self: flex-start;
     }

    
}

